# clickpy_poetry

./: .flake8  .gitignore  CONTRIBUTING.md  Makefile  Pipfile  README.md  click  coverage.sh  pyproject.toml  tox.ini
.github/workflows/: tests.yml
clicker/: __init__.py  __main__.py  clicker.py
clickpy/: __init__.py  __main__.py  auto_clicker.py  cli.py  click_strategy.py  click_strats.py  clickpy.py  main.py  strategy.py
clickpy/ClickStrategy/: __init__.py
clickpy/click_strategy/: __init__.py  basic.py  natural.py
clickpy/clickers/: __init__.py  basic_clicks.py  click_protocol.py
tests/: __init__.py  auto_click_test.py  basic_clicks_test.py  cli_main_test.py  cli_run_test.py  click_strategy_test.py  click_strategy_tests.py  natural_click_test.py  natural_clicks_test.py  test_auto_click.py  test_cli_run.py  test_main.py  test_main_cli.py  test_run.py
