[tool.poetry]
name = "clickpy"
version = "0.11.2"
description = "Automated mouse clicking script"
authors = ["fitzypop <fitzypop@pm.me>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/fitzypop/clickpy"
exclude = [".vscode/settings.json"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/fitzypop/clickpy/issues"

[tool.poetry.dependencies]
python = "^3.7"
typer = "^0.4.1"
PyAutoGUI = "^0.9.53"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
pytest = "^6.2.4"
pytest-mock = "^3.6.1"
pytest-cov = "^2.12.1"
coverage = "^5.5"
tox = "^3.24.1"
mypy = "^0.910"
pytest-sugar = "^0.9.4"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.237"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
clickpy = "clickpy:cli"
